fix padding gap on mobile search glyph

--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -391,7 +391,7 @@
   padding-right: 20px;
   padding-left: 20px;
   padding-bottom: 24px;
-    padding-top: 0.9em;
+  padding-top: 1.3em;
 }
 
 // .search-desktop {
