--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -7783,7 +7783,7 @@ header {
   padding-right: 20px;
   padding-left: 20px;
   padding-bottom: 24px;
-  padding-top: 0.9em;
+  padding-top: 1.3em;
 }
 
 .navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
